--- a/content/styles.css
+++ b/content/styles.css
@@ -1,66 +1,88 @@
-#gift{
-    position: absolute;
-    animation-name: gifted;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-}
-#aa{
-    display: block;
-    margin: auto;
-    width: 50%;
-    font-family: 'Brush Script MT', cursive;
-    position: relative;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-}
-#a{/*div img*/
+﻿#a{
     display: flex;
 }
-#a1{/*italy flag img*/
+#a1{
+
     width: 25%; 
     margin: auto;
 }
-#a2{/*logo*/
+#a2{
     width: 80%;
 }
-#a3{/*ph flag img*/
+#a3{
     width: 25%; 
     margin: auto;
 }
-@keyframes example {
-    0%   {color:red;}
-    25%  {color:yellow;}
-    50%  {color:blue;}
-    75%  {color:green;}
-    100% {color:red;}
-  }
-  @keyframes gifted {
-    0%   {font-size: 0px;}
-    25%  {font-size: 250px;}
-    50%  {font-size: 1000px;}
-    75%  {font-size: 10px;}
-    100% {font-size: 0px;}
-  }
-  @media only screen and (max-width: 768px) {
-    #aa{
-        font-size: 10px;
-        font-family: 'Brush Script MT', cursive;
-        animation-name: example;
-        animation-duration: 4s;
-        animation-iteration-count: infinite;
-    }
-    #gift{
-        position: absolute;
-        animation-name: gifted-mob;
-        animation-duration: 4s;
-        animation-iteration-count: infinite;
-    }
-    @keyframes gifted-mob {
-        0%   {font-size: 0px;}
-        25%  {font-size: 50px;}
-        50%  {font-size: 240px;}
-        75%  {font-size: 100px;}
-        100% {font-size: 0px;}
-    }
+#aa{
+    text-align: center;
+    margin: 20%;
 }
+#b{
+    margin-top: 10%;
+    margin-bottom: 10%;
+    animation-name: objectives;
+    animation-duration: 10s;
+}
+#bb{
+    text-align: center;
+}
+#b1 {
+    position: absolute;
+    background-color: yellow;
+    text-align: center;
+    width: 50%;
+}
+#b2 {
+    position: absolute;
+    background-color: red;
+    text-align: center;
+    width: 50%;
+    position: relative;
+    left: 50%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+#b3 {
+    background-color: white;
+    text-align: center;
+    width: 50%;
+    position: absolute;
+}
+#b4 {
+    position: absolute;
+    background-color: blue;
+    text-align: center;
+    width: 50%;
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    left: 50%;
+}
+#c{
+    margin-top: 15%;
+    margin-bottom: 15%;
+    box-shadow: 10px 10px;
+    background-color: orange;
+}
+#e{
+    margin-top: 10%;
+    background-color: red;
+}
+
+
+
+#weare{
+    width: 75%;
+    justify-content: center;
+    margin: auto;
+}
+.photos{
+    width: 100%;
+}
+@keyframes objectives {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+  }
